@@ -26,67 +26,57 @@ dependencyManagement {
 }
 
 dependencies {
-    compile project(":ngrinder-core")
+    implementation project(":ngrinder-core")
+    implementation (group: "org.springframework.boot", name: "spring-boot-starter-web")
+    implementation (group: "org.springframework.boot", name: "spring-boot-starter-freemarker")
+    implementation (group: "org.springframework.boot", name: "spring-boot-starter-security")
+    implementation (group: "org.springframework.boot", name: "spring-boot-starter-data-jpa")
+    implementation (group: "org.springframework.boot", name: "spring-boot-starter-cache")
+    implementation (group: "org.springframework.boot", name: "spring-boot-starter-webflux")
 
-    compile (group: "org.springframework.boot", name: "spring-boot-starter-web")
-    compile (group: "org.springframework.boot", name: "spring-boot-starter-freemarker")
-    compile (group: "org.springframework.boot", name: "spring-boot-starter-security")
-    compile (group: "org.springframework.boot", name: "spring-boot-starter-data-jpa")
-    compile (group: "org.springframework.boot", name: "spring-boot-starter-cache")
+    implementation (group: "com.github.jknack", name: "handlebars-springmvc", version: handlebars_version)
+    implementation (group: "com.github.jknack", name: "handlebars-helpers", version: handlebars_version)
+    implementation (group: "rome", name: "rome", version: "1.0")
+    implementation (group: "com.ibm.icu", name: "icu4j", version: "4.6")
+    implementation (group: "sonia.svnkit", name: "svnkit-dav", version: svnkit_version)
+    implementation (group: "sonia.svnkit", name: "svnkit", version: svnkit_version) {
+        exclude (module: "platform")
+    }
+    implementation (group: "javax.servlet.jsp", name: "jsp-api", version: "2.1")
+    implementation (group: "com.google.guava", name: "guava", version: "20.0")
+    implementation (group: "org.springframework.security", name: "spring-security-taglibs", version: spring_security_version)
+    implementation (group: "org.liquibase", name: "liquibase-core", version: "3.5.3")
+    implementation (group: "org.hibernate", name: "hibernate-jcache", version: hibernate_version)
+    implementation (group: "com.github.ben-manes.caffeine", name: "caffeine", version: "2.6.2")
+    implementation (group: "com.github.ben-manes.caffeine", name: "jcache", version: "2.6.2")
+    implementation (group: "mysql", name: "mysql-connector-java", version: "8.0.13")
+    implementation (group: "commons-httpclient", name: "commons-httpclient", version: "3.1")
+    implementation (group: "com.h2database", name: "h2", version: "1.4.197")
+    implementation (group: "commons-fileupload", name: "commons-fileupload", version: "1.3.1")
+    implementation (group: "commons-dbcp", name: "commons-dbcp", version: "1.4")
+    implementation (group: "com.fasterxml.jackson.core", name: "jackson-annotations", version: jackson_version)
+    implementation (group: "com.fasterxml.jackson.core", name: "jackson-databind", version: jackson_version)
+    implementation (group: "jaxen", name: "jaxen", version: "1.1.4")
+    implementation (group: "com.beust", name: "jcommander", version: "1.32")
+    implementation (group: "org.pf4j", name: "pf4j", version: "3.0.1")
+    implementation (group: "org.yaml", name: "snakeyaml", version: "1.25")
+    implementation (group: "commons-collections", name: "commons-collections", version: "3.2.1")
+    implementation (group: "org.reflections", name: "reflections", version: "0.9.9")
+    implementation (group: "com.hazelcast", name: "hazelcast", version: hazelcast_version)
+    implementation (group: "com.hazelcast", name: "hazelcast-spring", version: hazelcast_version)
+    implementation (group: "org.kohsuke", name: "github-api", version: "1.99")
+    implementation (group: "commons-validator", name: "commons-validator", version: "1.6")
+    implementation (group: "org.codehaus.groovy", name: "groovy-jsr223", version: groovy_version)
+    implementation (group: "com.unboundid", name: "unboundid-ldapsdk", version: "5.1.1")
 
-    compile (group: "com.github.jknack", name: "handlebars-springmvc", version: handlebars_version)
-    compile (group: "com.github.jknack", name: "handlebars-helpers", version: handlebars_version)
-    compile (group: "rome", name: "rome", version: "1.0")
-    compile (group: "com.ibm.icu", name: "icu4j", version: "4.6")
-    compile (group: "sonia.svnkit", name: "svnkit-dav", version: svnkit_version)
-    compile (group: "sonia.svnkit", name: "svnkit", version: svnkit_version)
-    compile (group: "javax.servlet.jsp", name: "jsp-api", version: "2.1")
-    compile (group: "org.python", name: "jython-standalone", version: "2.5.3")
-    compile (group: "com.google.guava", name: "guava", version: "20.0")
-    compile (group: "org.springframework.security", name: "spring-security-taglibs", version: spring_security_version)
+    compileOnly (group: "org.projectlombok", name: "lombok", version: lombok_version)
+    annotationProcessor (group: "org.projectlombok", name: "lombok", version: lombok_version)
 
-    compile (group: "org.apache.maven", name: "maven-embedder", version: "3.6.3")
-    compile (group: "org.apache.maven", name: "maven-compat", version: "3.6.3")
-    compile (group: "org.eclipse.aether", name: "aether-connector-basic", version: "1.1.0")
-    compile (group: "org.eclipse.aether", name: "aether-transport-wagon", version: "1.1.0")
-    compile (group: "org.apache.maven.wagon", name: "wagon-http", version: "2.8")
-    compile (group: "org.apache.maven.wagon", name: "wagon-provider-api", version: "2.8")
+    providedRuntime (group: "org.springframework.boot", name: "spring-boot-starter-tomcat", version: spring_boot_version)
 
-    compile (group: "org.liquibase", name: "liquibase-core", version: "3.5.3")
-    compile (group: "org.hibernate", name: "hibernate-jcache", version: hibernate_version)
-    compile (group: "com.github.ben-manes.caffeine", name: "caffeine", version: "2.6.2")
-    compile (group: "com.github.ben-manes.caffeine", name: "jcache", version: "2.6.2")
-    compile (group: "mysql", name: "mysql-connector-java", version: "8.0.13")
-    compile (group: "commons-httpclient", name: "commons-httpclient", version: "3.1")
-    compile (group: "com.h2database", name: "h2", version: "1.4.197")
-    compile (group: "commons-fileupload", name: "commons-fileupload", version: "1.3.1")
-    compile (group: "commons-dbcp", name: "commons-dbcp", version: "1.4")
-    compile (group: "cglib", name: "cglib", version: "2.2.2")
-    compile (group: "com.fasterxml.jackson.core", name: "jackson-annotations", version: jackson_version)
-    compile (group: "com.fasterxml.jackson.core", name: "jackson-databind", version: jackson_version)
-    compile (group: "jaxen", name: "jaxen", version: "1.1.4")
-    compile (group: "com.beust", name: "jcommander", version: "1.32")
-    compile (group: "org.pf4j", name: "pf4j", version: "3.0.1")
-    compile (group: "org.yaml", name: "snakeyaml", version: "1.25")
-    compile (group: "commons-collections", name: "commons-collections", version: "3.2.1")
-    compile (group: "org.reflections", name: "reflections", version: "0.9.9")
-    compile (group: "com.hazelcast", name: "hazelcast", version: hazelcast_version)
-    compile (group: "com.hazelcast", name: "hazelcast-spring", version: hazelcast_version)
-    compile (group: "org.kohsuke", name: "github-api", version: "1.99")
-    compile (group: "commons-validator", name: "commons-validator", version: "1.6")
-    compile (group: 'org.codehaus.groovy', name: 'groovy-jsr223', version: groovy_version)
-
-    compileOnly (group: "org.projectlombok", name: "lombok", version: "1.18.8")
-    annotationProcessor (group: "org.projectlombok", name: "lombok", version: "1.18.8")
-
-    providedRuntime (group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: spring_boot_version)
-
-    testCompile (group: 'junit', name: 'junit', version: '4.13')
-    testCompile (group: "org.easytesting", name: "fest-assert", version: "1.4")
-    testCompile (group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: spring_boot_version)
-
-    testCompileOnly (group: "org.projectlombok", name: "lombok", version: "1.18.8")
-    testAnnotationProcessor (group: "org.projectlombok", name: "lombok", version: "1.18.8")
+    testImplementation (group: "junit", name: "junit", version: junit_version)
+    testImplementation (group: "org.easytesting", name: "fest-assert", version: "1.4")
+    testImplementation (group: "org.springframework.boot", name: "spring-boot-starter-test", version: spring_boot_version)
 }
 
 
@@ -110,14 +100,15 @@ task convert_cr_lf {
 
 processResources {
     filesMatching("ngrinder-sh/agent/run_agent_internal.*") {
-        expand(["ngrinder_core": String.format("lib/ngrinder-core-%s.jar", project.version)])
+        expand(["ngrinder_core": String.format("lib/ngrinder-core-%s.jar", project.version),
+                "ngrinder_runtime": String.format("lib/ngrinder-runime-%s.jar", project.version)])
     }
 }
 
 test {
-    jvmArgs "-Xms600m", "-Xmx1024m", "-XX:MaxPermSize=200m"
+    jvmArgs "-Xms600m", "-Xmx1024m"
 }
 
 tasks.bootWar.dependsOn convert_cr_lf
 
-tasks.processResources.dependsOn tasks.getByPath(":ngrinder-frontend:webpack")
+tasks.processResources.finalizedBy tasks.getByPath(":ngrinder-frontend:webpack")
